syntax = "proto3";

package AUTH_SERVICE_GRPC_PACKAGE;

service AuthGRPCService {
  rpc VerificationJwtToken (VerificationJwtTokenRequest) returns (VerificationJwtTokenResponse) {}
}

message FullTokenResponse {
  string access_token = 1;
  string expires_in = 2;
  string refresh_token = 3;
}

message UserDataResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
  string image = 4;
  bool email_verified = 5;
  int32 coins = 6;
  string provider = 7;
  optional string username = 8;
  optional string password = 9;
  optional FullTokenResponse backend_token = 10;
  repeated string roles = 11;
  repeated string permissions = 12;
}

message VerificationJwtTokenRequest {
  string access_token = 1;
}

message VerificationJwtTokenResponse {
  int32 status = 1;
  string message = 2;
  UserDataResponse data = 3;
}